--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
